--- a/weitaixin/src/main/res/values/colors.xml
+++ b/weitaixin/src/main/res/values/colors.xml
@@ -23,6 +23,7 @@
     <color name="black1">#FF000000</color>
     <color name="black2">#FF353330</color>
     <color name="red0">#FFFE0058</color>
+    <color name="red1">#FFea5550</color>
     <!--主色调-->
     <color name="green0">#FF01CF97</color>
     <color name="green1">#FF24AA42</color>
