--- a/weitaixin/src/main/res/layout/activity_wo_message.xml
+++ b/weitaixin/src/main/res/layout/activity_wo_message.xml
@@ -1,38 +1,40 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="@color/gray5"
+              android:orientation="vertical">
 
     <include
         android:id="@+id/head_title_id"
-        layout="@layout/layout_title" />
+        layout="@layout/layout_title"/>
 
-  <!--  <com.handmark.pulltorefresh.library.PullToRefreshListView xmlns:ptr="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/pullToRefresh"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/head_title_id"
-        android:cacheColorHint="@drawable/text_color_selector"
-        android:divider="#55000000"
-        android:dividerHeight="4px"
-        android:fadingEdge="none"
-        ptr:ptrAnimationStyle="rotate"
-        ptr:ptrDrawable="@drawable/default_ptr_rotate"
-        ptr:ptrHeaderBackground="#383838"
-        ptr:ptrHeaderTextColor="#FFFFFF" />-->
+    <!--  <com.handmark.pulltorefresh.library.PullToRefreshListView xmlns:ptr="http://schemas.android.com/apk/res-auto"
+          android:id="@+id/pullToRefresh"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:layout_below="@id/head_title_id"
+          android:cacheColorHint="@drawable/text_color_selector"
+          android:divider="#55000000"
+          android:dividerHeight="4px"
+          android:fadingEdge="none"
+          ptr:ptrAnimationStyle="rotate"
+          ptr:ptrDrawable="@drawable/default_ptr_rotate"
+          ptr:ptrHeaderBackground="#383838"
+          ptr:ptrHeaderTextColor="#FFFFFF" />-->
 
     <com.handmark.pulltorefresh.library.PullToRefreshListView
         android:id="@+id/pullToRefresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="2dp"
         android:cacheColorHint="#00000000"
-        android:divider="@color/gray1"
-        android:dividerHeight="4dp"
+        android:divider="@color/gray5"
+        android:dividerHeight="3dp"
         android:fadingEdge="none"
         android:fastScrollEnabled="false"
         android:footerDividersEnabled="false"
         android:headerDividersEnabled="false"
-        android:smoothScrollbar="true" />
+        android:smoothScrollbar="true"/>
 
 </LinearLayout>
