--- a/weitaixin/src/main/res/layout/fragment_wo_info.xml
+++ b/weitaixin/src/main/res/layout/fragment_wo_info.xml
@@ -15,14 +15,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/head_title_id"
-        android:layout_marginTop="4dp"
-        android:background="@color/white0"
-        android:paddingBottom="14dp">
+        android:layout_marginTop="2dp"
+        android:background="@color/white0">
 
         <cn.ihealthbaby.weitaixin.view.RoundImageView
             android:id="@+id/iv_wo_head_icon"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_width="@dimen/dimen_dp_70"
+            android:layout_height="@dimen/dimen_dp_70"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp"
             android:scaleType="fitCenter"
@@ -34,18 +33,19 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/iv_wo_head_icon"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="@dimen/dimen_dp_10"
             android:singleLine="true"
-            android:text=""
-            android:textColor="@color/black0"
-            android:textSize="@dimen/font_normal"/>
+            android:text="姓名"
+            android:textColor="@color/text_color"
+            android:textSize="@dimen/font22"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_wo_head_name"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="8dp"
+            android:layout_marginBottom="@dimen/dimen_dp_15"
+            android:layout_marginTop="@dimen/dimen_dp_10"
             android:gravity="center"
             android:orientation="horizontal">
 
@@ -54,8 +54,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:singleLine="true"
-                android:text=""
-                android:textColor="@color/gray3"
+                android:text="已孕"
+                android:textColor="@color/text_subtitle_color"
                 android:textSize="@dimen/font_normal"/>
 
 
@@ -63,20 +63,20 @@
                 android:id="@+id/tv_wo_head_deliveryTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="@dimen/dimen_dp_5"
                 android:singleLine="true"
-                android:text=""
+                android:text="预产"
                 android:textColor="@color/gray3"
                 android:textSize="@dimen/font_normal"/>
         </LinearLayout>
 
         <ImageView
             android:id="@+id/iv_wo_head_arrow_right"
-            android:layout_width="10dp"
-            android:layout_height="16dp"
+            android:layout_width="9dp"
+            android:layout_height="15dp"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:layout_marginRight="20dp"
+            android:layout_marginRight="32dp"
             android:scaleType="fitXY"
             android:src="@drawable/wo_head_arrow_right"/>
 
@@ -91,29 +91,30 @@
         android:gravity="center_vertical">
 
         <ImageView
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_marginLeft="30dp"
+            android:layout_width="@dimen/dimen_dp_15"
+            android:layout_height="@dimen/dimen_dp_15"
+            android:layout_marginLeft="@dimen/dimen_dp_25"
             android:scaleType="fitXY"
             android:src="@drawable/wo_message"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="11dp"
             android:singleLine="true"
             android:text="我的消息"
             android:textColor="@drawable/text_color_hei_selector"
             android:textSize="@dimen/font_normal"/>
 
         <TextView
+            android:id="@+id/tv_message_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
             android:background="@drawable/message_count"
             android:gravity="center"
             android:text="1"
-            android:visibility="visible"/>
+            android:visibility="gone"/>
     </LinearLayout>
 
 
@@ -121,20 +122,20 @@
         android:id="@+id/ll_2"
         style="@style/wo_info_item"
         android:layout_below="@id/ll_1"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="@dimen/dimen_dp_12"
         android:gravity="center_vertical">
 
         <ImageView
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_marginLeft="30dp"
-            android:scaleType="fitXY"
+            android:layout_width="@dimen/dimen_dp_15"
+            android:layout_height="@dimen/dimen_dp_15"
+            android:layout_marginLeft="@dimen/dimen_dp_25"
+            android:scaleType="centerCrop"
             android:src="@drawable/wo_gold"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="11dp"
             android:singleLine="true"
             android:text="我的金库"
             android:textColor="@drawable/text_color_hei_selector"
@@ -154,20 +155,20 @@
         android:id="@+id/ll_3"
         style="@style/wo_info_item"
         android:layout_below="@id/ll_2"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="@dimen/dimen_dp_12"
         android:gravity="center_vertical">
 
         <ImageView
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_marginLeft="30dp"
-            android:scaleType="fitXY"
+            android:layout_width="@dimen/dimen_dp_15"
+            android:layout_height="@dimen/dimen_dp_15"
+            android:layout_marginLeft="@dimen/dimen_dp_25"
+            android:scaleType="centerCrop"
             android:src="@drawable/wo_system_set"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="11dp"
             android:singleLine="true"
             android:text="系统设置"
             android:textColor="@drawable/text_color_hei_selector"
@@ -187,20 +188,20 @@
         android:id="@+id/ll_4"
         style="@style/wo_info_item"
         android:layout_below="@id/ll_3"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="@dimen/dimen_dp_12"
         android:gravity="center_vertical">
 
         <ImageView
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_marginLeft="30dp"
-            android:scaleType="fitXY"
+            android:layout_width="@dimen/dimen_dp_15"
+            android:layout_height="@dimen/dimen_dp_15"
+            android:layout_marginLeft="@dimen/dimen_dp_25"
+            android:scaleType="centerCrop"
             android:src="@drawable/wo_grade"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="11dp"
             android:singleLine="true"
             android:text="高危评分"
             android:textColor="@drawable/text_color_hei_selector"
