--- a/weitaixin/src/main/res/layout/item_information.xml
+++ b/weitaixin/src/main/res/layout/item_information.xml
@@ -1,24 +1,24 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/white0"
-                android:paddingBottom="10dp"
-                android:paddingTop="10dp">
-
+                android:layout_height="67dp"
+                android:background="@color/white0">
 
     <RelativeLayout
         android:id="@+id/rl_avatar"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginLeft="20dp"
+        android:layout_width="@dimen/dimen_dp_38"
+        android:layout_height="@dimen/dimen_dp_38"
         android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true">
+        android:layout_centerVertical="true"
+        android:layout_marginBottom="@dimen/dimen_dp_18"
+        android:layout_marginLeft="@dimen/dimen_dp_14"
+        android:layout_marginTop="@dimen/dimen_dp_18">
 
         <cn.ihealthbaby.weitaixin.view.RoundImageView
             android:id="@+id/iv_head_icon"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:scaleType="fitXY"
             android:src="@drawable/button_monitor_helper"/>
 
         <TextView
@@ -29,9 +29,9 @@
             android:layout_alignParentTop="true"
             android:background="@drawable/notification_count"
             android:gravity="center"
-            android:visibility="gone"
             android:textColor="@color/white0"
-            android:textSize="10sp"/>
+            android:textSize="10sp"
+            android:visibility="gone"/>
 
     </RelativeLayout>
 
@@ -40,7 +40,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="13dp"
         android:layout_toRightOf="@id/rl_avatar"
         android:orientation="vertical">
 
@@ -50,6 +50,7 @@
             android:layout_height="wrap_content"
             android:singleLine="true"
             android:text="张删"
+            android:textColor="@color/font_color"
             android:textSize="@dimen/font_normal"/>
 
         <TextView
@@ -59,9 +60,10 @@
             android:layout_below="@id/tv_title"
             android:ellipsize="end"
             android:gravity="center_vertical"
-            android:paddingRight="20dp"
+            android:paddingRight="24dp"
             android:singleLine="true"
             android:text="登dsaddadad录"
+            android:textColor="@color/gray12"
             android:textSize="@dimen/font_normal"/>
 
     </LinearLayout>
@@ -71,8 +73,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:paddingRight="20dp"
+        android:layout_marginTop="17dp"
+        android:paddingRight="13dp"
         android:singleLine="true"
         android:text="20分钟"
+        android:textColor="@color/text_subtitle_color"
         android:textSize="@dimen/font_normal"/>
 </RelativeLayout>
