--- a/weitaixin/src/main/res/layout/activity_set_system_upload.xml
+++ b/weitaixin/src/main/res/layout/activity_set_system_upload.xml
@@ -1,8 +1,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:slideswitch="http://schemas.android.com/apk/res-auto"
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              xmlns:slideswitch="http://schemas.android.com/apk/res-auto"
               android:background="@color/gray5"
               android:orientation="vertical">
 
@@ -14,13 +14,14 @@
     <RelativeLayout
         android:id="@+id/ll_set_system_01"
         style="@style/wo_info_item"
-        android:gravity="center">
+        android:layout_marginTop="15dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="40dp"
+            android:layout_marginLeft="23dp"
+            android:gravity="center"
             android:singleLine="true"
             android:text="@string/auto_upload"
             android:textColor="@drawable/text_color_hei_selector"
@@ -28,13 +29,14 @@
 
         <cn.ihealthbaby.weitaixin.view.SlideSwitchView
             android:id="@+id/slide_switch_upload"
-            slideswitch:isOpen="true"
-            slideswitch:shape="circle"
-            slideswitch:themeColor="@color/green0"
-            android:layout_width="50dip"
+            android:layout_width="48dip"
             android:layout_height="30dip"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="30dp"/>
+            android:layout_marginRight="22dp"
+            slideswitch:isOpen="true"
+            android:layout_centerVertical="true"
+            slideswitch:shape="circle"
+            slideswitch:themeColor="@color/green0"/>
     </RelativeLayout>
 
 
