修改  我的-系统设置-意见和反馈    ui

--- a/weitaixin/src/main/res/drawable/frame_regist_action_selector.xml
+++ b/weitaixin/src/main/res/drawable/frame_regist_action_selector.xml
@@ -5,7 +5,7 @@
     <corners android:radius="4dp" />
 
     <!-- 填充 -->
-    <solid android:color="@color/button_login" />
+    <solid android:color="@color/green3" />
 
 
 </shape>
