--- a/weitaixin/src/main/res/layout/activity_set_system_suggestion.xml
+++ b/weitaixin/src/main/res/layout/activity_set_system_suggestion.xml
@@ -1,21 +1,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/gray5"
-    android:orientation="vertical">
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="@color/gray5"
+              android:orientation="vertical">
 
     <include
         android:id="@+id/head_title_id"
-        layout="@layout/layout_title" />
+        layout="@layout/layout_title"/>
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:background="@color/white0"
+        android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:padding="14dp"
-        android:layout_height="wrap_content">
+        android:background="@color/white0"
+        android:orientation="vertical"
+        android:padding="14dp">
 
         <EditText
             android:id="@+id/et_suggestion_text"
@@ -27,17 +27,17 @@
             android:lines="8"
             android:maxLength="200"
             android:textColor="@color/black1"
-            android:textSize="@dimen/font_normal" />
+            android:textSize="@dimen/font_normal"/>
 
         <TextView
             android:id="@+id/tv_sugg_text_count"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="right|bottom"
-            android:paddingRight="30dp"
+            android:paddingRight="4dp"
             android:text="0/200"
             android:textColor="@color/gray7"
-            android:textSize="@dimen/font_normal" />
+            android:textSize="@dimen/font_normal"/>
 
     </LinearLayout>
 
@@ -47,25 +47,25 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/rl_id"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginLeft="36dp"
+        android:layout_marginRight="36dp"
+        android:layout_marginTop="26dp"
         android:background="@drawable/frame_regist_action_selector"
         android:gravity="center"
         android:padding="16dp"
         android:singleLine="true"
         android:text="发给微胎心"
         android:textColor="@drawable/text_color_selector"
-        android:textSize="@dimen/font_normal" />
+        android:textSize="@dimen/font_normal"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="14dp"
         android:gravity="center"
-        android:layout_marginTop="10dp"
         android:text="你的意见 会让我们做到更好！"
         android:textColor="@color/gray7"
-        android:textSize="@dimen/font_normal" />
+        android:textSize="@dimen/font_normal"/>
 
 
 </LinearLayout>
