--- a/weitaixin/src/main/res/layout/activity_wo_message_of_reply_message.xml
+++ b/weitaixin/src/main/res/layout/activity_wo_message_of_reply_message.xml
@@ -17,8 +17,8 @@
 
         <cn.ihealthbaby.weitaixin.view.RoundImageView
             android:id="@+id/iv_wo_head_icon"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="20dp"
             android:scaleType="fitCenter"
@@ -28,7 +28,7 @@
             android:id="@+id/tv_wo_head_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="8dp"
             android:gravity="center"
             android:singleLine="true"
             android:text="张丽丽"
@@ -39,10 +39,11 @@
             android:id="@+id/tv_date"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
             android:gravity="center"
             android:singleLine="true"
             android:text="24周5天"
-            android:textColor="@color/font_hint"
+            android:textColor="@color/gray10"
             android:textSize="@dimen/font_normal"/>
 
         <LinearLayout
@@ -58,7 +59,7 @@
                 android:layout_height="wrap_content"
                 android:singleLine="true"
                 android:text="监护目的: 胎动异常"
-                android:textColor="@color/gray3"
+                android:textColor="@color/gray7"
                 android:textSize="@dimen/font_normal"/>
 
             <TextView
@@ -68,7 +69,7 @@
                 android:layout_marginLeft="10dp"
                 android:singleLine="true"
                 android:text="监护心情: 比较差"
-                android:textColor="@color/gray3"
+                android:textColor="@color/gray7"
                 android:textSize="@dimen/font_normal"/>
         </LinearLayout>
 
@@ -78,9 +79,9 @@
             android:layout_height="wrap_content"
             android:gravity="top|left"
             android:paddingBottom="10dp"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
-            android:paddingTop="10dp"
+            android:paddingLeft="23dp"
+            android:paddingRight="23dp"
+            android:paddingTop="14dp"
             android:text="15-06-152015-06-152015-06-152-06-152015-06-15"
             android:textColor="@color/black0"
             android:textSize="@dimen/font_title"/>
@@ -89,8 +90,9 @@
             android:id="@+id/tvAskTime"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="23dp"
             android:gravity="right|bottom"
-            android:paddingBottom="30dp"
+            android:paddingBottom="26dp"
             android:paddingRight="20dp"
             android:singleLine="true"
             android:text="2015-06-15"
@@ -102,71 +104,85 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white0"
-        android:orientation="vertical"
-        android:paddingTop="6dp">
+        android:orientation="vertical">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
             <cn.ihealthbaby.weitaixin.view.RoundImageView
                 android:id="@+id/ivDoctorHeadPic"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:layout_alignParentLeft="true"
-                android:layout_marginLeft="35dp"
+                android:layout_marginBottom="18dp"
+                android:layout_marginLeft="31dp"
+                android:layout_marginTop="18dp"
                 android:scaleType="fitCenter"
                 android:src="@drawable/camera_icon"/>
 
-            <TextView
-                android:id="@+id/tvDoctorName"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_toRightOf="@id/ivDoctorHeadPic"
-                android:paddingLeft="15dp"
-                android:singleLine="true"
-                android:text="张纪中"
-                android:textColor="@color/black0"
-                android:textSize="@dimen/font_title"/>
+                android:orientation="vertical">
 
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/tvDoctorTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toRightOf="@id/tvDoctorName"
-                android:paddingLeft="5dp"
-                android:singleLine="true"
-                android:text="主任医生"
-                android:textColor="@color/gray3"
-                android:textSize="@dimen/font_title"/>
+                    <TextView
+                        android:id="@+id/tvDoctorName"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="18dp"
+                        android:layout_toRightOf="@id/ivDoctorHeadPic"
+                        android:paddingLeft="15dp"
+                        android:singleLine="true"
+                        android:text="张纪中"
+                        android:textColor="@color/black0"
+                        android:textSize="@dimen/font_title"/>
 
-            <TextView
-                android:id="@+id/tvHospitalName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBottom="@id/ivDoctorHeadPic"
-                android:layout_below="@id/tvDoctorName"
-                android:layout_toRightOf="@id/ivDoctorHeadPic"
-                android:gravity="center_vertical"
-                android:paddingLeft="15dp"
-                android:singleLine="true"
-                android:text="北京海淀区北京海淀区"
-                android:textColor="@color/gray3"
-                android:textSize="@dimen/font_normal"/>
+                    <TextView
+                        android:id="@+id/tvDoctorTitle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="18dp"
+                        android:layout_toRightOf="@id/tvDoctorName"
+                        android:paddingLeft="5dp"
+                        android:singleLine="true"
+                        android:text="主任医生"
+                        android:textColor="@color/gray3"
+                        android:textSize="@dimen/font_title"/>
+                </LinearLayout>
 
+                <TextView
+                    android:id="@+id/tvHospitalName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBottom="@id/ivDoctorHeadPic"
+                    android:layout_below="@id/tvDoctorName"
+                    android:layout_toRightOf="@id/ivDoctorHeadPic"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="15dp"
+                    android:singleLine="true"
+                    android:text="北京海淀区北京海淀区"
+                    android:textColor="@color/gray3"
+                    android:textSize="@dimen/font_normal"/>
+            </LinearLayout>
 
-        </RelativeLayout>
+        </LinearLayout>
 
         <TextView
             android:id="@+id/tvReplyContext"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
             android:gravity="top|left"
             android:paddingBottom="10dp"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
-            android:paddingTop="10dp"
+            android:paddingLeft="23dp"
+            android:paddingRight="23dp"
             android:text="15-06-152015-06-15206-152015-06-152015-06-152015-06-15"
             android:textColor="@color/black0"
             android:textSize="@dimen/font_title"/>
@@ -175,6 +191,7 @@
             android:id="@+id/tvReplyTime"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:gravity="right|bottom"
             android:paddingBottom="20dp"
             android:paddingRight="20dp"
