--- a/weitaixin/src/main/res/layout/activity_login.xml
+++ b/weitaixin/src/main/res/layout/activity_login.xml
@@ -1,15 +1,15 @@
 <RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/white0"
-                tools:context="cn.ihealthbaby.weitaixin.ui.LoginActivity">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/white0"
+    tools:context="cn.ihealthbaby.weitaixin.ui.LoginActivity">
 
     <include
         android:id="@+id/head_title_id"
-        layout="@layout/layout_title" />
+        layout="@layout/layout_title"/>
 
     <RelativeLayout
         android:id="@+id/rl_id"
@@ -24,27 +24,25 @@
         <EditText
             android:id="@+id/et_phone_number_login"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="60dp"
+            android:layout_height="53dp"
             android:background="@null"
             android:gravity="center"
             android:hint="请输入手机号"
             android:maxLength="11"
             android:numeric="integer"
-            android:padding="14dp"
             android:phoneNumber="true"
-            android:textColorHint="@color/text_color_hint"
             android:singleLine="true"
-            android:textColor="@color/black2"
             android:text="15210015381"
-            android:textSize="@dimen/font_normal" />
+            android:textColor="@color/black0"
+            android:textColorHint="@color/gray4"
+            android:textSize="@dimen/font_normal"/>
 
         <View
             android:id="@+id/view_line_login"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_below="@id/et_phone_number_login"
-            android:background="@color/gray11" />
+            android:background="@color/gray4"/>
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -56,19 +54,18 @@
             <EditText
                 android:id="@+id/et_password_login"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="60dp"
+                android:layout_height="53dp"
                 android:background="@null"
                 android:gravity="center"
                 android:hint="请输入密码"
                 android:inputType="textPassword"
                 android:maxLength="20"
-                android:padding="16dp"
                 android:password="true"
-                android:textColorHint="@color/text_color_hint"
                 android:singleLine="true"
                 android:text="123456"
-                android:textSize="@dimen/font_normal" />
+                android:textColor="@color/black0"
+                android:textColorHint="@color/gray4"
+                android:textSize="@dimen/font_normal"/>
 
 
             <CheckBox
@@ -77,9 +74,9 @@
                 android:layout_height="20dp"
                 android:layout_gravity="right|center_vertical"
                 android:layout_marginRight="20dp"
-                android:scaleType="fitCenter"
                 android:background="@drawable/eye_selector"
-                android:button="@null"/>
+                android:button="@null"
+                android:scaleType="fitCenter"/>
         </FrameLayout>
 
 
@@ -100,30 +97,30 @@
         android:singleLine="true"
         android:text="登录"
         android:textColor="@drawable/text_color_selector"
-        android:textSize="@dimen/font_normal" />
+        android:textSize="@dimen/font_normal"/>
 
     <TextView
         android:id="@+id/tv_regist_action_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="20dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="@dimen/dimen_dp_80"
+        android:layout_alignParentLeft="true"
+        android:layout_marginBottom="114dp"
+        android:layout_marginLeft="52dp"
         android:text="注册"
         android:textColor="@drawable/text_color_gray3_selector"
-        android:textSize="@dimen/font_normal" />
+        android:textSize="@dimen/font_normal"/>
 
     <TextView
         android:id="@+id/tv_loginsms_action_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="@dimen/dimen_dp_80"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="114dp"
+        android:layout_marginRight="52dp"
         android:text="短信验证码登录"
         android:textColor="@drawable/text_color_gray3_selector"
-        android:textSize="@dimen/font_normal" />
+        android:textSize="@dimen/font_normal"/>
 
 </RelativeLayout>
