修改  完善个人资料  ui

--- a/weitaixin/src/main/res/layout/activity_info_edit.xml
+++ b/weitaixin/src/main/res/layout/activity_info_edit.xml
@@ -1,24 +1,24 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
-                android:background="@color/white0"
                 android:layout_height="match_parent"
+                android:background="@color/white0"
                 tools:context="cn.ihealthbaby.weitaixin.ui.LoginActivity">
 
     <include
         android:id="@+id/head_title_id"
-        layout="@layout/layout_title" />
+        layout="@layout/layout_title"/>
 
 
     <cn.ihealthbaby.weitaixin.ui.widget.RoundImageView
         android:id="@+id/iv_head_icon_info"
+        android:layout_width="96dp"
+        android:layout_height="96dp"
         android:layout_below="@id/head_title_id"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_marginTop="20dp"
         android:layout_centerHorizontal="true"
-        android:scaleType="fitCenter"
-        android:src="@drawable/camera_icon" />
+        android:layout_marginTop="40dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/camera_icon"/>
 
     <RelativeLayout
         android:id="@+id/rl_id"
@@ -27,7 +27,7 @@
         android:layout_below="@id/iv_head_icon_info"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="27dp"
         android:background="@drawable/frame_selector">
 
         <LinearLayout
@@ -38,34 +38,33 @@
 
             <EditText
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
+                android:layout_weight="1"
                 android:background="@null"
                 android:gravity="right"
-                android:textColor="@color/text_color_hint"
                 android:hint="姓名"
+                android:maxLength="10"
                 android:padding="16dp"
                 android:singleLine="true"
-                android:maxLength="10"
-                android:visibility="gone"
-                android:textSize="@dimen/font_normal" />
+                android:textColor="@color/text_color_hint"
+                android:textSize="@dimen/font_normal"
+                android:visibility="gone"/>
 
             <EditText
                 android:id="@+id/et_name_info"
                 android:layout_width="0dp"
-                android:layout_weight="2"
-                android:layout_height="wrap_content"
+                android:layout_height="53dp"
                 android:layout_centerHorizontal="true"
+                android:layout_weight="2"
                 android:background="@null"
                 android:gravity="center"
-                android:textColorHint="@color/text_color_hint"
-                android:textColor="@color/black1"
                 android:hint="请输入名字"
-                android:padding="16dp"
-                android:singleLine="true"
                 android:maxLength="10"
-                android:textSize="@dimen/font_normal" />
+                android:singleLine="true"
+                android:textColor="@color/black0"
+                android:textColorHint="@color/gray4"
+                android:textSize="@dimen/font_normal"/>
         </LinearLayout>
 
         <View
@@ -73,46 +72,45 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_below="@id/ll_user_name"
-            android:background="@color/gray11" />
+            android:background="@color/gray4"/>
 
         <LinearLayout
             android:id="@+id/ll_birthday"
-            android:layout_below="@id/view_line_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@id/view_line_info"
             android:orientation="horizontal">
 
             <EditText
                 android:id="@+id/tv_birthday"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
+                android:layout_weight="1"
                 android:background="@null"
                 android:gravity="right"
-                android:textColor="@color/text_color_hint"
                 android:hint="生日"
+                android:maxLength="10"
                 android:padding="16dp"
                 android:singleLine="true"
-                android:maxLength="10"
-                android:visibility="gone"
-                android:textSize="@dimen/font_normal" />
+                android:textColor="@color/text_color_hint"
+                android:textSize="@dimen/font_normal"
+                android:visibility="gone"/>
 
             <TextView
                 android:id="@+id/et_birthdate_info"
                 android:layout_width="0dp"
-                android:layout_weight="2"
-                android:layout_height="wrap_content"
+                android:layout_height="53dp"
                 android:layout_below="@id/ll_user_name"
                 android:layout_centerHorizontal="true"
+                android:layout_weight="2"
                 android:background="@null"
-                android:textColorHint="@color/text_color_hint"
-                android:textColor="@color/black1"
                 android:gravity="center"
                 android:hint="你的出生日期"
-                android:padding="16dp"
                 android:singleLine="true"
-                android:textSize="@dimen/font_normal" />
+                android:textColor="@color/black0"
+                android:textColorHint="@color/gray4"
+                android:textSize="@dimen/font_normal"/>
 
         </LinearLayout>
 
@@ -121,44 +119,44 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_below="@id/ll_birthday"
-            android:background="@color/gray11" />
+            android:background="@color/gray4"/>
+
         <LinearLayout
-            android:layout_below="@+id/view_line2_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/view_line2_info"
             android:orientation="horizontal">
 
             <EditText
                 android:id="@+id/tv_expect_day"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
+                android:layout_weight="1"
                 android:background="@null"
                 android:gravity="right"
-                android:textColor="@color/text_color_hint"
                 android:hint="预产日期"
+                android:maxLength="10"
                 android:padding="16dp"
                 android:singleLine="true"
-                android:maxLength="10"
-                android:visibility="gone"
-                android:textSize="@dimen/font_normal" />
+                android:textColor="@color/text_color_hint"
+                android:textSize="@dimen/font_normal"
+                android:visibility="gone"/>
 
             <TextView
                 android:id="@+id/et_date_info"
                 android:layout_width="0dp"
-                android:layout_weight="2"
-                android:layout_height="wrap_content"
+                android:layout_height="53dp"
                 android:layout_below="@id/view_line2_info"
                 android:layout_centerHorizontal="true"
-                android:textColorHint="@color/text_color_hint"
-                android:textColor="@color/black1"
+                android:layout_weight="2"
                 android:background="@null"
                 android:gravity="center"
                 android:hint="预产日期(提高监测准确性)"
-                android:padding="16dp"
                 android:singleLine="true"
-                android:textSize="@dimen/font_normal" />
+                android:textColor="@color/black0"
+                android:textColorHint="@color/gray4"
+                android:textSize="@dimen/font_normal"/>
         </LinearLayout>
     </RelativeLayout>
 
@@ -170,13 +168,13 @@
         android:layout_below="@id/rl_id"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="80dp"
         android:background="@drawable/frame_regist_action_selector"
         android:gravity="center"
         android:padding="16dp"
         android:singleLine="true"
         android:text="确定"
         android:textColor="@drawable/text_color_selector"
-        android:textSize="@dimen/font_normal" />
+        android:textSize="@dimen/font_normal"/>
 
 </RelativeLayout>
